# calcurse-load

./: .gitignore  README.md  example_update_google_cal  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml
calcurse_load/: __init__.py  __main__.py  calcurse.py  log.py
calcurse_load/ext/: __init__.py  abstract.py  all.py  gcal.py  todotxt.py  utils.py
gcal_index/: __main__.py
hooks/: gcal.enabled  post-save  pre-load  todotxt.enabled
