[metadata]
name = calcurse_load
version = 0.1.0
description = Sources events for calcurse from Google Calendar and todo.txt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seanbreckenridge/calcurse_load
author = Sean Breckenridge
author_email = "seanbrecke@gmail.com"
license = MIT
license_files = LICENSE
keywords = calendar todo google
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
install_requires =
    click
    cssselect
    gcsa>=0.4.0
    lxml
python_requires = >=3.8
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    calcurse_load = calcurse_load.__main__:cli
    gcal_index = gcal_index.__main__:main

[options.packages.find]
exclude =
    tests*
include =
    calcurse_load
    gcal_index

[options.extras_require]
testing =
    flake8
    mypy
    pytest

[options.package_data]
calcurse_load = py.typed

[flake8]
ignore = E501,E402,W503,E266,E203

[mypy]
pretty = True
show_error_context = True
show_error_codes = True
check_untyped_defs = True
namespace_packages = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True

[tool:pytest]
addopts =
    --doctest-modules calcurse_load
